docs/versioned_docs/version-0.9.1/integrations/hooks.md
# Execution Hooks

Execution hooks provide powerful extension points to customize and enhance agent behavior at runtime. Agent Kernel supports **pre-execution hooks** and **post-execution hooks** that allow you to modify prompts, inject context, validate inputs, and transform responses.

:::tip Session & Memory Access
Hooks have full access to the session object and auxiliary memory (volatile and non-volatile caches). This enables:
- Accessing and modifying session state
- Storing temporary data in volatile cache (RAG context, files)
- Persisting preferences in non-volatile cache (user settings, metadata)

[Learn about session management →](/docs/core-concepts/session) | [Learn about memory management →](/docs/architecture/memory-management)
:::

## Overview

Hooks enable you to:

- **Inject Context**: Add RAG (Retrieval-Augmented Generation) context to prompts
- **Validate Input**: Implement guardrails to filter inappropriate content
- **Modify Responses**: Transform or enrich agent replies
- **Logging & Analytics**: Track execution patterns and user interactions
- **Content Moderation**: Apply safety filters to inputs and outputs

```mermaid
sequenceDiagram
    participant User
    participant Runtime
    participant PreHook1
    participant PreHook2
    participant Agent
    participant PostHook1
    participant PostHook2
    
    User->>Runtime: Send Prompt
    Runtime->>PreHook1: on_run()
    PreHook1->>PreHook2: Modified Prompt
    PreHook2->>Runtime: Validated Prompt
    
    alt Guard Rail Triggered
        PreHook2-->>User: Rejection Message
    else Execution Proceeds
        Runtime->>Agent: Execute
        Agent->>Runtime: Reply
        Runtime->>PostHook1: on_run()
        PostHook1->>PostHook2: Modified Reply
        PostHook2->>Runtime: Final Reply
        Runtime-->>User: Response
    end
```

:::info Current Limitation
Hooks currently execute only for the **initial user prompt** to the first agent. Agent-to-agent handoffs within workflows are not yet instrumented. This limitation will be addressed in a future release.
:::

## Hook Types

### Pre-Execution Hooks (PreHook)

Pre-execution hooks run **before** an agent processes a prompt. They can:
- Modify the prompt
- Inject additional context
- Validate input
- **Halt execution** and return early with a custom message

**Use Cases:**
- RAG context injection
- Input guardrails and content filtering
- Prompt validation
- User authentication/authorization
- Request logging and analytics
- Seeding or editing the per-run [framework context](#per-run-framework-context) carried across turns

:::info Passing additional context to PreHooks
The built in REST and Lambda servers automatically packs any properties in the request body, other than ["session_id", "prompt", "agent"] as AgentRequestAny objects (with the key name). 
These will be passed to PreHooks and will be ignored by the LLM agents

A complete example is provided [here](https://github.com/yaalalabs/agent-kernel/tree/develop/examples/api/openai)
:::

### Post-Execution Hooks (PostHook)

Post-execution hooks run **after** an agent generates a response. They can:
- Modify the agent's reply
- Add disclaimers or additional information
- Apply content moderation to outputs
- Log responses for analytics

**Use Cases:**
- Output guardrails and safety filters
- Adding disclaimers or compliance messages
- Response formatting
- Sentiment analysis
- Response logging and analytics
- Reading (or editing) the per-run [framework context](#per-run-framework-context) after the run wrote it back
- Trimming or inspecting the [framework-native session](#framework-native-session) (e.g. capping raw conversation history) via `session.get_framework_session()`

### Per-run framework context {#per-run-framework-context}

Hooks are the supported surface for the reserved
[`framework_context`](../core-concepts/session.md#framework-context--per-run-state) session key — a
framework-agnostic, picklable context/state dict the runner injects into the native framework call and
writes back after a successful run. Reach it through three `Session` methods:
`get_framework_context()`, `set_framework_context(dict)`, `clear_framework_context()`.

The ordering around a run is what makes each hook type useful:

- A **pre-hook** runs before the runner loads the context, so its seed or edit is part of the dict
  injected **this turn**.
- A **post-hook** runs after write-back but before the session is stored, so it observes the completed
  run's mutations **and** its own edits are persisted.

```python
from agentkernel import PostHook, PreHook
from agentkernel.core.model import AgentReplyText

class SeedCart(PreHook):
    async def on_run(self, session, agent, requests):
        # Never auto-created, so seed it explicitly on the first turn.
        if session.get_framework_context() is None:
            session.set_framework_context({"cart": []})
        return requests

    def name(self):
        return "SeedCart"

class AppendCart(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        # The runner has already written back, so this is the completed run's context.
        cart = (session.get_framework_context() or {}).get("cart", [])
        if isinstance(agent_reply, AgentReplyText):
            agent_reply.response += f"\n\nCurrent cart: {', '.join(cart) or '(empty)'}"
        return agent_reply

    def name(self):
        return "AppendCart"
```

:::warning Tools use the framework's native handle, not these accessors
These accessors are for hooks only. A tool that writes through `ToolContext.get().session` writes to a
different object than the run is carrying, so its write is discarded — tools must use their framework's
native handle instead. See
[Session → Framework context / per-run state](../core-concepts/session.md#framework-context--per-run-state)
for the handle to use per framework and why.
:::

### Accessing the framework-native session {#framework-native-session}

Unlike `framework_context` above (an app-defined dict you seed yourself), `get_framework_session()`
reaches the framework adapter's **own** session object directly — the same one each runner stores
under its runner-name key (e.g. `"openai"`) — without you needing to know that key:

```python
from agentkernel import PostHook

class HistoryTrimHook(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        openai_session = session.get_framework_session()
        if openai_session is not None:
            items = await openai_session.get_items()
            if len(items) > 20:
                await openai_session.clear_session()
                await openai_session.add_items(items[-20:])  # keep only the most recent 20
        return agent_reply

    def name(self):
        return "HistoryTrimHook"
```

It resolves the key via [`Agent.current()`](../core-concepts/agent.md#currently-executing-agent), so
it only works from inside a hook or a tool — where an agent is actually executing — and returns the
**live** stored object, so mutating it through its own methods (as above) is visible immediately with
no `session.set(...)` call needed. See
[Session → Accessing the current framework session](../core-concepts/session.md#framework-session-access)
for the full contract, and
[`examples/cli/session-context`](https://github.com/yaalalabs/agent-kernel/tree/develop/examples/cli/session-context)
for the complete `HistoryTrimHook` example, which caps the OpenAI Agents SDK's raw conversation history
after every turn.

### Structured Replies in Hooks

When an agent is configured for structured output (e.g., `output_type` in the OpenAI
Agents SDK or `output_schema` in Google ADK), post-execution hooks receive the
`AgentReplyAny` object itself, **not a stringified version**. The structured result
is available on `reply.content` as a dict, and hooks can inspect or modify it in
place, exactly as they do with the other reply types:

```python
from agentkernel import PostHook
from agentkernel.core.model import AgentReplyAny

class StructuredModerationHook(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        if isinstance(agent_reply, AgentReplyAny):
            # Inspect and modify the structured dict content directly
            agent_reply.content["moderated"] = True
        return agent_reply

    def name(self):
        return "StructuredModerationHook"
```

Pre-execution hooks may likewise halt execution by returning an `AgentReplyAny`
(for example, serving a cached structured answer without running the agent).
`str()` on an `AgentReplyAny` returns the JSON-serialized content, so hooks that
log or render replies as text keep working unchanged. See the per-framework
configuration in the [framework docs](../frameworks/overview).

See [examples/api/openai_structured](https://github.com/yaalalabs/agent-kernel/tree/develop/examples/api/openai_structured) for a complete example with a post-execution hook that modifies a structured reply.

### Streaming Hooks (`on_stream_event`)

When the application runs in streaming mode (`execution.mode: stream`), or over the AG-UI surface, the agent reply arrives as a sequence of typed **events** rather than one final reply. Post-execution hooks see every one of them — message and reasoning text, tool call names, arguments and results, and the boundaries that pair them — by overriding `on_stream_event`.

The cheapest useful case needs no bookkeeping at all. A tool's return value arrives whole, in one event, on every adapter:

```python
from agentkernel import PostHook

class ToolResultRedactionHook(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        return agent_reply  # non-streaming path

    async def on_stream_event(self, session, requests, agent, event):
        if event.type == "tool_call_result":
            return event.model_copy(update={"content": scrub(event.content)})
        return event

    def name(self):
        return "ToolResultRedactionHook"
```

Four return shapes:

- **The event** — pass it on, or return a modified event of the **same** `type` to rewrite it in place. A different `type` raises `TypeError`; use a list to emit another type.
- **`None`** — drop it. Nothing is sent to the client for that event. Dropping a whole pair is ordinary (hiding a reasoning block means dropping `reasoning_start`, `reasoning_delta` and `reasoning_end` alike); dropping only a closing event leaves the client with something that never finishes, which is your responsibility.
- **A list** — emitted in order, in place of the event. This is how a hook emits *more* than it was given.
- **Raise `StreamHalt`** — end the run. See below.

:::warning A returned list ends the chain
`return event` and `return [event]` are **not** equivalent. A list is emitted as-is and the hooks after yours never see those events. Return a bare event unless you specifically mean to emit a different number of them.
:::

`StreamChunk.delta` is populated only for `TextDelta`, and it is taken from whatever event is finally emitted — so a rewrite reaches both `delta` and `event`, and plain-text consumers and recorded threads carry the redacted version. Reasoning text still reaches your hook but is never projected into `delta`, so it does not leak into surfaces that concatenate it as the answer.

#### Holding text back to rewrite it

Prose arrives one fragment at a time, so a pattern can straddle two events. To rewrite text rather than merely observe it, hold the fragments and release the assembled whole at the boundary:

```python
class MessageRedactionHook(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        return agent_reply

    async def on_stream_event(self, session, requests, agent, event):
        # The buffer belongs on the session, never on `self`: one hook instance serves every
        # concurrent request in the process, while the volatile cache is per session and is
        # cleared when the run ends.
        buf = session.get_volatile_cache()

        if event.type == "text_delta":
            key = f"redact.{event.message_id}"
            buf.set(key, (buf.get(key) or "") + event.content)
            return None                                   # held: nothing sent yet

        if event.type == "message_end":
            key = f"redact.{event.message_id}"
            held = buf.get(key)
            if held is None:
                return event                              # message carried no text
            buf.delete(key)
            return [TextDelta(message_id=event.message_id, content=scrub(held)), event]

        return event

    def name(self):
        return "MessageRedactionHook"
```

The client then sees the message start, nothing, then the whole redacted message and its close. **Incremental delivery is gone for whatever you hold** — the answer appears at once instead of typing out.

To keep most of the streaming feel, hold back only a bounded tail: emit everything except the last N-1 characters (N being your longest pattern), scrubbed, and flush the remainder at `message_end`. Text then lags by a fixed, small amount rather than by the whole message. Size the window to your longest pattern — anything longer can straddle the boundary and slip through.

#### Refusing instead of redacting

Some content is not worth rewriting. Raising `StreamHalt` ends the run:

```python
from agentkernel import PostHook, StreamHalt

class CredentialBrake(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        return agent_reply

    async def on_stream_event(self, session, requests, agent, event):
        if event.type == "tool_call_result" and looks_like_a_key(event.content):
            raise StreamHalt("Response withheld: credential material detected")
        return event

    def name(self):
        return "CredentialBrake"
```

Agent Kernel then emits the closing event for any boundary the stream left open — so a client is not left with an unfinished message or tool call — followed by a single chunk carrying your reason as its `error` with `done: true`. The session is **not** stored, and a recorded thread keeps no assistant message, so a halted turn leaves no trace in conversation state. Because it acts on a fragment rather than a finished unit, halting costs no latency.

Treat a halted response as invalid rather than truncated: discard the partial rather than rendering it as a short answer. Any exception that is **not** `StreamHalt` propagates unchanged — a bug in a hook is a defect, not an orderly end of stream.

:::note Tool events are observations, not gates
Adapters emit `ToolCall*` events after the framework has already made the call. Halting on one prevents the result being **disclosed**; it does not prevent the tool from having **run**.
:::

#### Migrating from `on_stream_chunk`

`on_stream_chunk` has been removed. It took a `str` and returned a `str`, so it only ever saw text and could not inspect a tool call. Replace it with `on_stream_event`:

| Before | After |
| --- | --- |
| `async def on_stream_chunk(self, session, requests, agent, delta: str)` | `async def on_stream_event(self, session, requests, agent, event)` |
| `return delta` | `return event` |
| `return modified_text` | `return event.model_copy(update={"content": modified_text})` |
| `return None` | `return None` (unchanged) |

A hook that still defines `on_stream_chunk` will not raise — the method is simply never called, and its filtering silently stops applying. Check for it when upgrading.

**Use Cases:** redacting tool arguments and results, PII masking over assembled text, profanity filtering, hiding reasoning traces from clients, refusing a response outright, streaming analytics.

## Implementing Hooks

### Pre-Execution Hook

Create a class that inherits from `PreHook` and implements the required methods:

```python
from agentkernel import PreHook, Agent, Session
from agentkernel.core.model import AgentRequest, AgentReply, AgentRequestText, AgentReplyText

class MyPreHook(PreHook):
    async def on_run(
        self, 
        session: Session, 
        agent: Agent, 
        requests: list[AgentRequest]
    ) -> list[AgentRequest] | AgentReply:
        """
        Process the requests before agent execution.
        
        :param session: The current session instance
        :param agent: The agent that will execute the requests
        :param requests: List of requests to the agent (can include text, files, images, etc.)
        :return: AgentReply: If the hook decides to halt execution, return an AgentReply
                 list[AgentRequest]: The modified requests or original list. You can modify in place
                                     or add additional content (e.g., files, images, RAG context)
        """
        # Your logic here - example: pass through unchanged
        return requests
    
    def name(self) -> str:
        """Return the hook name for logging/debugging."""
        return "MyPreHook"
```

### Post-Execution Hook

Create a class that inherits from `PostHook`:

```python
from agentkernel import PostHook, Agent, Session
from agentkernel.core.model import AgentRequest, AgentReply, AgentReplyText

class MyPostHook(PostHook):
    async def on_run(
        self,
        session: Session,
        requests: list[AgentRequest],
        agent: Agent,
        agent_reply: AgentReply
    ) -> AgentReply:
        """
        Process the agent's reply after execution.
        
        :param session: The current session instance
        :param requests: The original requests provided to the agent after pre-hooks
        :param agent: The agent that executed the requests
        :param agent_reply: The reply from the agent. For the first posthook, this is 
                           the unmodified agent reply. For subsequent posthooks, this is 
                           the reply modified by previous posthooks in the chain.
        :return: AgentReply: The modified reply (or original if no changes)
        """
        # Your logic here
        return agent_reply  # Return original reply
    
    def name(self) -> str:
        """Return the hook name for logging/debugging."""
        return "MyPostHook"
```

## Registering Hooks

Hooks are registered per agent using the Module's fluent API:

```python
from agentkernel.openai import OpenAIModule
from agents import Agent

# Create your agent
agent = Agent(name="assistant", instructions="...")

# Register agent and hooks using method chaining
OpenAIModule([agent]).pre_hook(agent, [
    RAGHook(),
    GuardRailHook(),
]).post_hook(agent, [
    ModerationHook(),
    DisclaimerHook(),
])
```

The `pre_hook()` and `post_hook()` methods can be chained for convenience, and work with any Agent Kernel module (OpenAI, LangGraph, CrewAI, etc.).

### Hook Execution Order

Hooks execute in the order they are registered:

```python
OpenAIModule([agent]).pre_hook(agent, [Hook1(), Hook2(), Hook3()])
```

**Execution flow:** `Hook1 → Hook2 → Hook3 → Agent`

Each hook receives the prompt **modified by the previous hook**, creating a processing chain.

## Common Patterns

### Pattern 1: Guard Rail Hook

Validate input and block inappropriate content:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequest, AgentRequestText, AgentReplyText

class GuardRailHook(PreHook):
    BLOCKED_KEYWORDS = ["hack", "illegal", "malware"]
    
    async def on_run(self, session, agent, requests):
        # Extract text from first request (assuming single text request)
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests  # No text to validate
        
        prompt_lower = prompt.lower()
        
        # Check for blocked content
        for keyword in self.BLOCKED_KEYWORDS:
            if keyword in prompt_lower:
                # Halt execution and return rejection message
                return AgentReplyText(
                    response=f"I cannot assist with requests related to '{keyword}'. "
                             "Please ask a different question."
                )
        
        # Prompt is safe - continue with execution
        return requests
    
    def name(self):
        return "GuardRailHook"
```

### Pattern 2: RAG Context Injection

Enrich prompts with relevant context from a knowledge base:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequestText

class RAGHook(PreHook):
    def __init__(self, knowledge_base):
        self.knowledge_base = knowledge_base
    
    async def on_run(self, session, agent, requests):
        # Extract text from first request (assuming single text request)
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests  # No text to enrich
        
        # Search knowledge base for relevant context
        context = self.knowledge_base.search(prompt)
        
        if context:
            # Inject context into prompt
            enriched_prompt = f"""Context:
{context}

Question: {prompt}

Please answer the question using the provided context."""
            return [AgentRequestText(prompt=enriched_prompt)]
        
        # No relevant context found - return original
        return requests
    
    def name(self):
        return "RAGHook"
```

### Pattern 3: Response Moderation

Apply safety filters to agent responses:

```python
from agentkernel import PostHook
from agentkernel.core.model import AgentReplyText

class ModerationHook(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        # Extract text from reply
        if isinstance(agent_reply, AgentReplyText):
            reply_text = agent_reply.response
        else:
            return agent_reply  # Can't moderate non-text replies
        
        # Check reply for inappropriate content
        if self._contains_sensitive_info(reply_text):
            return AgentReplyText(
                response="I apologize, but I cannot provide that information. "
                         "Please rephrase your question."
            )
        
        return agent_reply
    
    def _contains_sensitive_info(self, text):
        # Your moderation logic
        return False
    
    def name(self):
        return "ModerationHook"
```

### Pattern 4: Adding Disclaimers

Append legal or compliance disclaimers to responses:

```python
from agentkernel import PostHook
from agentkernel.core.model import AgentReplyText

class DisclaimerHook(PostHook):
    async def on_run(self, session, requests, agent, agent_reply):
        disclaimer = (
            "\n\n---\n"
            "*Disclaimer: This information is for general guidance only "
            "and should not be considered professional advice.*"
        )
        
        # Add disclaimer to text replies
        if isinstance(agent_reply, AgentReplyText):
            return AgentReplyText(response=agent_reply.response + disclaimer)
        
        return agent_reply
    
    def name(self):
        return "DisclaimerHook"
```

### Pattern 5: Logging and Analytics

Track user interactions and agent performance:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequestText
from datetime import datetime

class AnalyticsHook(PreHook):
    def __init__(self, logger):
        self.logger = logger
    
    async def on_run(self, session, agent, requests):
        # Extract text for logging (if available)
        prompt_text = None
        if requests and isinstance(requests[0], AgentRequestText):
            prompt_text = requests[0].prompt
        
        # Log the interaction
        self.logger.log({
            "session_id": session.id,
            "agent": agent.name,
            "prompt": prompt_text,
            "timestamp": datetime.now(),
        })
        
        # Pass through without modification
        return requests
    
    def name(self):
        return "AnalyticsHook"
```

## Best Practices

### 1. Keep Hooks Focused

Each hook should have a single, well-defined responsibility:

```python
# ✅ Good: Focused hooks
OpenAIModule([agent]).pre_hook(agent, [
    RAGHook(),          # Only does context injection
    GuardRailHook(),    # Only does validation
    LoggingHook(),      # Only does logging
])

# ❌ Bad: Monolithic hook doing everything
OpenAIModule([agent]).pre_hook(agent, [
    DoEverythingHook(),  # RAG + validation + logging
])
```

### 2. Order Matters

Place hooks in logical order based on dependencies:

```python
# ✅ Correct order: Enrich first, then validate
OpenAIModule([agent]).pre_hook(agent, [
    RAGHook(),         # Add context first
    GuardRailHook(),   # Then validate enriched prompt
])

# ❌ Wrong order: Validation happens before enrichment
OpenAIModule([agent]).pre_hook(agent, [
    GuardRailHook(),   # Validates before context added
    RAGHook(),         # Context added after validation
])
```

### 3. Handle Errors Gracefully

Hooks should not crash - handle errors and return sensible defaults:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequestText

class RobustRAGHook(PreHook):
    async def on_run(self, session, agent, requests):
        # Extract text from first request
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests
        
        try:
            context = self.knowledge_base.search(prompt)
            if context:
                enriched = self._enrich_prompt(prompt, context)
                return [AgentRequestText(prompt=enriched)]
        except Exception as e:
            # Log error but don't crash
            self.logger.error(f"RAG lookup failed: {e}")
        
        # Fallback to original requests
        return requests
    
    def name(self):
        return "RobustRAGHook"
```

### 4. Optimize Performance

Hooks execute on every request - keep them fast:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequestText
from functools import lru_cache

class OptimizedRAGHook(PreHook):
    def __init__(self, vector_store):
        self.vector_store = vector_store
        self.cache = {}  # Simple cache (consider LRU in production)
    
    async def on_run(self, session, agent, requests):
        # Extract text from first request
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests
        
        # Check cache first
        cache_key = hash(prompt)
        if cache_key in self.cache:
            return [AgentRequestText(prompt=self.cache[cache_key])]
        
        # Perform lookup
        enriched = self._do_rag(prompt)
        self.cache[cache_key] = enriched
        
        return [AgentRequestText(prompt=enriched)]
    
    def name(self):
        return "OptimizedRAGHook"
```

### 5. Make Hooks Configurable

Allow hooks to be customized without code changes:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequestText, AgentReplyText

class ConfigurableGuardRailHook(PreHook):
    def __init__(self, blocked_keywords=None, max_length=5000):
        self.blocked_keywords = blocked_keywords or []
        self.max_length = max_length
    
    async def on_run(self, session, agent, requests):
        # Extract text from first request
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests
        
        # Validate based on configuration
        if len(prompt) > self.max_length:
            return AgentReplyText(response=f"Input too long (max {self.max_length} chars)")
        
        for keyword in self.blocked_keywords:
            if keyword in prompt.lower():
                return AgentReplyText(response=f"Cannot process requests about '{keyword}'")
        
        return requests
    
    def name(self):
        return "ConfigurableGuardRailHook"
```

### 6. Leverage Async Operations

Hook methods are async, allowing you to perform I/O operations efficiently:

```python
from agentkernel import PreHook
from agentkernel.core.model import AgentRequestText

class AsyncRAGHook(PreHook):
    def __init__(self, vector_store, embeddings_api):
        self.vector_store = vector_store
        self.embeddings_api = embeddings_api
    
    async def on_run(self, session, agent, requests):
        # Extract text from first request
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests
        
        # Perform async operations
        embedding = await self.embeddings_api.embed(prompt)
        results = await self.vector_store.search(embedding, top_k=3)
        
        if results:
            context = "\n".join([r.text for r in results])
            enriched = f"Context:\n{context}\n\nQuestion: {prompt}"
            return [AgentRequestText(prompt=enriched)]
        
        return requests
    
    def name(self):
        return "AsyncRAGHook"
```

**Async Operations You Can Perform:**
- Vector database queries
- API calls to external services
- Database lookups
- File I/O operations
- HTTP requests for content moderation APIs

## Complete Example

Here's a full example combining multiple hooks:

```python
from agentkernel.api import RESTAPI
from agentkernel.openai import OpenAIModule
from agentkernel import PreHook, PostHook
from agents import Agent

# Define hooks
from agentkernel.core.model import AgentRequestText, AgentReplyText

class RAGHook(PreHook):
    async def on_run(self, session, agent, requests):
        # Extract text from first request
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests
        
        # Simulate knowledge base lookup
        context = self._search_knowledge_base(prompt)
        if context:
            enriched = f"Context: {context}\n\nQuestion: {prompt}"
            return [AgentRequestText(prompt=enriched)]
        return requests
    
    def _search_knowledge_base(self, query):
        # Your RAG implementation
        return None
    
    def name(self):
        return "RAGHook"

class GuardRailHook(PreHook):
    BLOCKED = ["hack", "illegal", "malware"]
    
    async def on_run(self, session, agent, requests):
        # Extract text from first request
        if requests and isinstance(requests[0], AgentRequestText):
            prompt = requests[0].prompt
        else:
            return requests
        
        for keyword in self.BLOCKED:
            if keyword in prompt.lower():
                return AgentReplyText(response=f"Cannot assist with '{keyword}'")
        return requests
    
    def name(self):
        return "GuardRailHook"

class DisclaimerHook(PostHook):   
    async def on_run(self, session, requests, agent, agent_reply):
        if isinstance(agent_reply, AgentReplyText):
            return AgentReplyText(response=agent_reply.response + "\n\n*Disclaimer: AI-generated content.*")
        return agent_reply
    
    def name(self):
        return "DisclaimerHook"

# Create agent
assistant = Agent(
    name="assistant",
    instructions="You are a helpful AI assistant."
)

# Register agent with hooks using method chaining
OpenAIModule([assistant]).pre_hook(assistant, [
    RAGHook(),
    GuardRailHook(),
]).post_hook(assistant, [
    DisclaimerHook(),
])

if __name__ == "__main__":
    RESTAPI.run()
```

## Examples

### Full Working Example

See the complete hooks demonstration in the repository:

📁 **[examples/api/hooks/](https://github.com/yaalalabs/agent-kernel/tree/develop/examples/api/hooks)**

This example includes:
- `hooks.py` - GuardRailHook, RAGHook, and DisclaimerHook implementations
- `app.py` - Agent setup with hook registration
- `app_test.py` - Automated end-to-end test suite (drives the real OpenAI Agents SDK over HTTP)
- `demonstration.py` - Direct execution example
- `README.md` - Detailed documentation

**Key Features Demonstrated:**
- ✅ Guardrail blocking inappropriate requests
- ✅ RAG context injection from knowledge base
- ✅ Hook chaining (RAG → GuardRail pre-hooks)
- ✅ Input validation (length limits, keyword filtering)
- ✅ Automated testing of hook behavior

### Session Context Example

See the complete `Session.get_framework_session()` demonstration in the repository:

📁 **[examples/cli/session-context/](https://github.com/yaalalabs/agent-kernel/tree/develop/examples/cli/session-context)**

This example includes:
- `hooks.py` - `HistoryTrimHook` implementation
- `demo.py` - Agent setup with hook registration
- `hooks_test.py` - Network-free unit test for `HistoryTrimHook` / `get_framework_session()`
- `README.md` - Detailed documentation

**Key Features Demonstrated:**
- ✅ Capping framework-native session history via `session.get_framework_session()`
- ✅ Mutating the framework-native session's live reference in place (no `session.set(...)` needed)
- ✅ Automated testing of the hook through `Runtime.run()`, with no network access required

### Running the Example

```bash
cd examples/api/hooks

# Build environment
./build.sh

# Run the API server
source .venv/bin/activate
python app.py

# Run tests (in another terminal)
source .venv/bin/activate
pytest app_test.py -v

# Or run direct example
python example_usage.py
```

### Running the Session Context Example

```bash
cd examples/cli/session-context

# Build environment
./build.sh

# Run the demo
python demo.py

# Run tests (in another terminal)
uv run pytest -s
```

### Testing Hooks

The example includes comprehensive tests:

```python
# Test guardrail blocks inappropriate content
async def test_guard_rail_blocks():
    response = await client.send("How can I hack into a system?")
    assert "cannot assist" in response.lower()

# Test RAG injects context
async def test_rag_context():
    response = await client.send("What is Agent Kernel?")
    assert "framework" in response.lower()

# Test hook chaining
async def test_chaining():
    # RAG enriches, then GuardRail validates
    response = await client.send("Tell me about Python malware")
    assert "cannot assist" in response.lower()
```

## API Reference

### PreHook Interface

```python
from agentkernel.core.model import AgentRequest, AgentReply

class PreHook(ABC):
    @abstractmethod
    async def on_run(
        self, session: Session, agent: Agent, requests: list[AgentRequest]
    ) -> list[AgentRequest] | AgentReply:
        """
        Hook method called before an agent starts executing a request. These hooks can modify 
        the requests or halt execution.
        
        Some use cases:
          - RAG context injection
          - Prompt validation like input guardrails
          - Logging or analytics

        :param session: The session instance
        :param agent: The agent that will execute the requests
        :param requests: List of requests to the agent (can include text, files, images, etc.)
        
        :return: AgentReply: If the hook decides to halt execution, return an AgentReply 
                            which will be sent back to the user
                 list[AgentRequest]: The modified requests or the input list. You can modify 
                                    the requests in place without taking copies. You can also 
                                    add additional content to the requests list (e.g., files, 
                                    images, RAG context)
        """
        raise NotImplementedError

    @abstractmethod
    def name(self) -> str:
        """
        Returns the name of the prehook.
        """
        raise NotImplementedError
```

### PostHook Interface

```python
from agentkernel.core.model import AgentRequest, AgentReply

class PostHook(ABC):
    @abstractmethod
    async def on_run(
        self, session: Session, requests: list[AgentRequest], agent: Agent, agent_reply: AgentReply
    ) -> AgentReply:
        """
        Hook method called after an agent finishes executing a request. These hooks can modify 
        the agent's reply.
        
        Some use cases:
          - Moderation of agent replies (e.g., output guardrails)
          - Adding disclaimers or additional information to the reply
          - Logging or analytics

        Note: If the hook changes the reply, the modified reply will be sent to the next hook 
              for processing.

        :param session: The session instance
        :param requests: The original requests provided to the agent after any pre-execution 
                        hooks have been applied
        :param agent: The agent that executed the requests
        :param agent_reply: The reply to process. For the first posthook, this is the unmodified
                           agent reply. For subsequent posthooks, this is the reply modified by
                           previous posthooks in the chain.

        :return: The modified reply. If not modified, return the current reply.
        """
        raise NotImplementedError

    @abstractmethod
    def name(self) -> str:
        """
        :return: the name of the posthook.
        """
        raise NotImplementedError
```

### Module Hook Methods

```python
# Register pre-execution hooks (returns Module for chaining)
module.pre_hook(
    agent: Agent,
    hooks: list[PreHook]
) -> Module

# Register post-execution hooks (returns Module for chaining)
module.post_hook(
    agent: Agent,
    hooks: list[PostHook]
) -> Module

# Method chaining example
OpenAIModule([agent]).pre_hook(agent, [...]).post_hook(agent, [...])
```

## Troubleshooting

### Hook Not Executing

**Problem:** Hook is registered but not being called.

**Solutions:**
1. Ensure you're passing the correct agent object to the hook method: `module.pre_hook(agent, [...])`
2. Verify the agent is included in the Module initialization: `OpenAIModule([agent])`
3. Check that hooks are registered on the same Module instance that's being used

### Hook Halts All Execution

**Problem:** Pre-hook returns `False` but you want execution to continue.

**Solution:** Return `True` as the first element of the tuple:

```python
# ❌ Wrong: Halts execution
return AgentReplyText(response="Execution halted")

# ✅ Correct: Continues execution
return requests  # or modified requests list
```

### Modified Prompt Not Used

**Problem:** Hook modifies prompt but agent uses original.

**Solution:** Ensure you're returning the modified prompt:

```python
# ❌ Wrong: Returns original
async def on_run(self, session, agent, requests):
    if requests and isinstance(requests[0], AgentRequestText):
        prompt = requests[0].prompt
        enriched = f"Context: {context}\n{prompt}"
    return requests  # Returns original!

# ✅ Correct: Returns modified
async def on_run(self, session, agent, requests):
    if requests and isinstance(requests[0], AgentRequestText):
        prompt = requests[0].prompt
        enriched = f"Context: {context}\n{prompt}"
        return [AgentRequestText(prompt=enriched)]  # Returns modified
```

### Hooks Executing in Wrong Order

**Problem:** Hooks run in unexpected order.

**Solution:** Check registration order - hooks execute in list order:

```python
# This order: RAG → GuardRail
OpenAIModule([agent]).pre_hook(agent, [RAGHook(), GuardRailHook()])

# This order: GuardRail → RAG (different!)
OpenAIModule([agent]).pre_hook(agent, [GuardRailHook(), RAGHook()])
```

## Related Documentation

- [Core Concepts: Runtime](../core-concepts/runtime.md) - Runtime orchestration and agent management
- [Core Concepts: Session](../core-concepts/session.md) - Session management and state
- [Testing](../testing/overview.md) - Testing strategies for agents with hooks
- [Traceability and Observability](../advanced/traceability.md) - Monitoring hook execution

## Limitations

### Current Limitations

1. **Agent Handoffs**: Hooks only execute for the initial user prompt. Agent-to-agent handoffs within workflows are not instrumented.
   - **Workaround**: Implement workflow-level hooks in your agent orchestration logic
   - **Future**: Full workflow instrumentation planned for future release

2. **Hook State**: Hooks are stateless across executions (unless you implement state management)
   - **Workaround**: Use session storage for maintaining state across requests

### Async Support

**All hook methods are now async** (`async def`). This allows hooks to perform asynchronous operations like:
- Database queries
- API calls to external services
- Vector database searches for RAG
- Async logging operations

```python
class AsyncRAGHook(PreHook):
    async def on_run(self, session, agent, original_prompt, prompt, additional_context=None):
        # Can now use async operations
        context = await self.vector_db.search(prompt)
        return True, self._enrich(prompt, context)
```

### Planned Enhancements

- Agent-to-agent handoff instrumentation
- Hook middleware framework
- Built-in hook library (common patterns)
- Hook performance metrics

## Summary

Execution hooks provide powerful extension points for:
- ✅ Input validation and guardrails
- ✅ Context injection (RAG)
- ✅ Response moderation and transformation
- ✅ Logging and analytics
- ✅ Custom business logic

**Key Takeaways:**
- Pre-hooks run before execution and can halt processing
- Post-hooks run after execution and modify responses
- Hooks execute in registration order
- Each hook receives modifications from previous hooks
- Keep hooks focused, fast, and error-resistant

Get started with the [complete working example](https://github.com/yaalalabs/agent-kernel/tree/develop/examples/api/hooks) to see hooks in action!
